--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,38 +5,37 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  build:
-    working_directory: ~/repo
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
+
+  lint-dockerfile:
+    steps:
+      - run:
+          name: lint Dockerfile using hadolint docker image image
+          command: docker run --rm -i hadolint/hadolint < Dockerfile
+  test-app:
     docker:
       - image: circleci/golang:1.15.8
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
       - run:
-          name: Install Dependencies
-          command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
+          name: running unit test for backend
+          command: go test -v -short --count=1 $(go list ./...)
+  build-app-karsajobs:
+    steps:
       - run:
-          name: Run tests
-          command: |
-            mkdir -p /tmp/test-reports
-            gotestsum --junitfile /tmp/test-reports/unit-tests.xml
-      - store_test_results:
-          path: /tmp/test-reports
+          name: build image dengan nama ghcr.io/<username>/karsajobs:latest 
+          command: docker build -t ghcr.io/egi-190137/karsajobs:latest .
+    steps:
+      - run:
+          name: login pada github container registry dengan token yang tersimpan pada environment variable
+          command: echo $GH_TOKEN | sudo docker login ghcr.io -u egi-190137 --password-stdin
+    steps:
+      - run:
+          name: Push image ke github container registry
+          command: sudo docker push ghcr.io/egi-190137/karsajobs:latest
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - build
+      - lint-dockerfile
+      - test-app
+      - build-app-karsajobs
