--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,30 +5,29 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-
   lint-dockerfile:
     steps:
       - run:
           name: lint Dockerfile using hadolint docker image image
           command: docker run --rm -i hadolint/hadolint < Dockerfile
-  test-app:
-    docker:
-      - image: circleci/golang:1.15.8
-    steps:
-      - run:
-          name: running unit test for backend
-          command: go test -v -short --count=1 $(go list ./...)
-  build-app-karsajobs:
-    steps:
-      - run:
-          name: build image dengan nama ghcr.io/<username>/karsajobs:latest 
-          command: docker build -t ghcr.io/egi-190137/karsajobs:latest .
-      - run:
-          name: login pada github container registry dengan token yang tersimpan pada environment variable
-          command: echo $GH_TOKEN | sudo docker login ghcr.io -u egi-190137 --password-stdin
-      - run:
-          name: Push image ke github container registry
-          command: sudo docker push ghcr.io/egi-190137/karsajobs:latest
+  # test-app:
+  #   docker:
+  #     - image: circleci/golang:1.15.8
+  #   steps:
+  #     - run:
+  #         name: running unit test for backend
+  #         command: go test -v -short --count=1 $(go list ./...)
+  # build-app-karsajobs:
+  #   steps:
+  #     - run:
+  #         name: build image dengan nama ghcr.io/<username>/karsajobs:latest 
+  #         command: docker build -t ghcr.io/egi-190137/karsajobs:latest .
+  #     - run:
+  #         name: login pada github container registry dengan token yang tersimpan pada environment variable
+  #         command: echo $GH_TOKEN | sudo docker login ghcr.io -u egi-190137 --password-stdin
+  #     - run:
+  #         name: Push image ke github container registry
+  #         command: sudo docker push ghcr.io/egi-190137/karsajobs:latest
 
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
