--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,11 @@ version: 2.1
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
   lint-dockerfile:
+    docker:
+      - image: docker:stable
     steps:
+      - checkout
+      - setup_remote_docker
       - run:
           name: lint Dockerfile using hadolint docker image image
           command: docker run --rm -i hadolint/hadolint < Dockerfile
