Trying build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,22 +18,22 @@ jobs:
     docker:
       - image: circleci/golang:1.15.8
     steps:
-      - checkout
-      - setup_remote_docker
       - run:
           name: running unit test for backend
           command: go test -v -short --count=1 $(go list ./...)
-  # build-app-karsajobs:
-  #   steps:
-  #     - run:
-  #         name: build image dengan nama ghcr.io/<username>/karsajobs:latest 
-  #         command: docker build -t ghcr.io/egi-190137/karsajobs:latest .
-  #     - run:
-  #         name: login pada github container registry dengan token yang tersimpan pada environment variable
-  #         command: echo $GH_TOKEN | sudo docker login ghcr.io -u egi-190137 --password-stdin
-  #     - run:
-  #         name: Push image ke github container registry
-  #         command: sudo docker push ghcr.io/egi-190137/karsajobs:latest
+  build-app-karsajobs:
+    docker:
+      - image: docker:stable
+    steps:
+      - run:
+          name: build image dengan nama ghcr.io/<username>/karsajobs:latest 
+          command: docker build -t ghcr.io/egi-190137/karsajobs:latest .
+      - run:
+          name: login pada github container registry dengan token yang tersimpan pada environment variable
+          command: echo $GH_TOKEN | sudo docker login ghcr.io -u egi-190137 --password-stdin
+      - run:
+          name: Push image ke github container registry
+          command: sudo docker push ghcr.io/egi-190137/karsajobs:latest
 
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
@@ -41,4 +41,4 @@ workflows:
     jobs:
       - lint-dockerfile
       - test-app
-      # - build-app-karsajobs
+      - build-app-karsajobs
